Legger inn endringssøknad for PPN